# TyGrit

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  environment.yaml  main.py  pixi.toml  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
TyGrit/: __init__.py  config.py
benchmark/: __init__.py  grasp_benchmark.py
config/: example.toml  grasp_example.toml
docs/: architecture.md  conf.py  configuration.md  index.md  rl-baseline.md  setup.md  visualization.md  why-new-framework.md
examples/: grasp_example.py
prompts/: multi_sim_mobile_manip_refactor.md
scripts/: download_graspgen_weights.sh  setup.sh  sync_deps.py  viz_grasp_poses.py
test/: conftest.py  test_basic.py  test_bt.py  test_config.py  test_control.py  test_cross_validation.py  test_envs_fetch_factory.py  test_envs_fetch_worlds_wiring.py  test_ik.py  test_kinematics.py  test_logging.py  test_mobile_grasp_manifest.py  test_occlusion.py  test_planner.py  test_pointcloud_scene.py  test_rl_policy.py  test_rl_rewards.py  test_robot_filter.py  test_robots_fetch.py  test_scheduler.py  test_segmentation.py  test_sim_base.py  test_sim_genesis_base_twist.py  test_task_loader.py  test_tracking.py  test_types.py  test_types_robot_cfg.py  test_types_worlds.py  test_utils.py  test_visualization.py  test_visualization_o3d.py  test_worlds_ai2thor_manifests.py  test_worlds_asset_sources.py  test_worlds_manifest.py  test_worlds_maniskill.py  test_worlds_mobile_grasp_generator.py  test_worlds_object_sampler.py  test_worlds_placement.py  test_worlds_reachability.py  (+3 more)
(+234 files in other folders)
