[build-system]
requires = ["setuptools", "wheel", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "TyGrit"
version = "0.1.0"
description = "A tygrit project"
readme = "README.md"
authors = [{ name = "Hu Tianrun", email = "tianrunhu@gmail.com" }]
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
include = ["TyGrit*"]
